--- a/сss/styles.css
+++ b/сss/styles.css
@@ -1,5 +1,110 @@
-.nav-list-link {
+body {
+    font-family: 'Playfair Display', serif;
     font-size: 14px;
-    line-height: 19px;  
-    color: #7D7D7D;
+    color: #626262;
 }
+
+h1,
+h2, 
+h3,
+h4,
+h5,
+h6,
+p {
+    margin: 0;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+img {
+    display: block;
+    max-width: 100%;
+}
+
+.container {
+    width: 1200px;
+    margin: 0 auto;
+    padding-left: 147px;
+    padding-right: 147px;
+}
+
+/* menu nav */
+.nav {
+    margin-top: 70px;
+    margin-bottom: 90px;
+}
+.nav-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.nav-list-item:not(:last-child) {
+    margin-right: 100px;
+}
+
+.nav-list-item:hover,
+.nav-list-item:focus {
+    color: #03A9F4;
+}
+
+/* main */
+.main-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 130px 65px;
+}
+
+.main-list-item {
+    flex-basis: calc((100% - 65px) / 2);   
+}
+
+.main-list-img {
+    margin-bottom: 62px;
+}
+
+.category {
+    font-family: 'Ubuntu';
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 16px;
+    margin-bottom: 32px;
+    color: #B4AD9E;
+}
+
+.main-list-title {
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 40px;
+    margin-bottom: 40px;
+}
+
+.main-list-text {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 19px;
+}
+
+.button {
+    display: flex;
+    width: 165px;
+    height: 60px;
+    padding: 20px 50px;
+    align-items: center;
+    border: 1px solid #626262;
+    margin: 0 auto;
+    margin-top: 90px;
+    margin-bottom: 66px;
+}
+
+
